[gd_scene format=3 uid="uid://beai0jb26caya"]

[ext_resource type="Script" uid="uid://brmu6q8h34l7h" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="AudioStream" uid="uid://cpwc867ckxfre" path="res://audio/drawer.mp3" id="2_0bbpv"]
[ext_resource type="AudioStream" uid="uid://chf4dd4mnkeuw" path="res://audio/legendary.mp3" id="3_rarhs"]

[node name="Main" type="Control" unique_id=1845261906]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="." unique_id=1255707931]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.051, 0.059, 0.071, 1)

[node name="VBox" type="ScrollContainer" parent="." unique_id=921480193]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBox" unique_id=1148740612]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBoxInner" type="VBoxContainer" parent="VBox/MarginContainer" unique_id=966116148]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="VBox/MarginContainer/VBoxInner" unique_id=847697853]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "üé≤ Âºï„ÅçÂá∫„Åó„É´„Éº„Éà„Ç≤„Éº„É†"
horizontal_alignment = 1

[node name="StashBar" type="PanelContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=107540189]
layout_mode = 2

[node name="StashHBox" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner/StashBar" unique_id=1929482893]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StashIcon" type="Label" parent="VBox/MarginContainer/VBoxInner/StashBar/StashHBox" unique_id=1469398796]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/font_size = 15
text = "üí∞ „Çπ„Çø„ÉÉ„Ç∑„É•"

[node name="StashAmount" type="Label" parent="VBox/MarginContainer/VBoxInner/StashBar/StashHBox" unique_id=795563067]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.95, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "¬•10,000"

[node name="StashCostLabel" type="Label" parent="VBox/MarginContainer/VBoxInner/StashBar/StashHBox" unique_id=569770688]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.75, 1)
theme_override_font_sizes/font_size = 12
text = "Ôºà1Êé¢Á¥¢ ¬•10,000Ôºâ"

[node name="SubtitleLabel" type="Label" parent="VBox/MarginContainer/VBoxInner" unique_id=1763444310]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)
theme_override_font_sizes/font_size = 13
text = "Âºï„ÅçÂá∫„Åó„ÇíÈñã„Åë„Å¶„Ç¢„Ç§„ÉÜ„É†„Çí„Ç≤„ÉÉ„ÉàÔºÅÊúÄÈ´ò„ÅÆ‰æ°ÂÄ§„ÇíÁõÆÊåá„ÅõÔºÅ"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=42608578]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ItemListButton" type="Button" parent="VBox/MarginContainer/VBoxInner/ButtonRow" unique_id=1428305117]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "üìã „Ç¢„Ç§„ÉÜ„É†Âõ≥Èëë"

[node name="RulesButton" type="Button" parent="VBox/MarginContainer/VBoxInner/ButtonRow" unique_id=1815407482]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "üìñ „É´„Éº„É´"

[node name="TopBar" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=175611978]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="LabelRound" type="Label" parent="VBox/MarginContainer/VBoxInner/TopBar" unique_id=716728148]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.88, 1, 1)
theme_override_font_sizes/font_size = 15
text = "„É©„Ç¶„É≥„Éâ: 1 / 3"

[node name="LabelValue" type="Label" parent="VBox/MarginContainer/VBoxInner/TopBar" unique_id=1798158978]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "ÂêàË®à: ¬•0"

[node name="LabelItems" type="Label" parent="VBox/MarginContainer/VBoxInner/TopBar" unique_id=276295872]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)
theme_override_font_sizes/font_size = 15
text = "„Ç¢„Ç§„ÉÜ„É†: 0ÂÄã"

[node name="BonusPanel" type="PanelContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=1612102879]
visible = false
layout_mode = 2

[node name="BonusVBox" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/BonusPanel" unique_id=1543648732]
layout_mode = 2

[node name="BonusTitleLabel" type="Label" parent="VBox/MarginContainer/VBoxInner/BonusPanel/BonusVBox" unique_id=1616501052]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.596, 0, 1)
theme_override_font_sizes/font_size = 18
text = "‚≠ê „Éú„Éº„Éä„Çπ„Ç§„Éô„É≥„ÉàÁô∫ÁîüÔºÅ ‚≠ê"
horizontal_alignment = 1

[node name="BonusHBox" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner/BonusPanel/BonusVBox" unique_id=1337905737]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="BonusIcon" type="Control" parent="VBox/MarginContainer/VBoxInner/BonusPanel/BonusVBox/BonusHBox" unique_id=191626487]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="BonusVBox2" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/BonusPanel/BonusVBox/BonusHBox" unique_id=1014534202]
layout_mode = 2

[node name="BonusLabel" type="Label" parent="VBox/MarginContainer/VBoxInner/BonusPanel/BonusVBox/BonusHBox/BonusVBox2" unique_id=1019866889]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
text = "‚≠ê „Éú„Éº„Éä„ÇπÂØæË±°: „Ç¢„Ç§„ÉÜ„É†Âêç"

[node name="BonusMult" type="Label" parent="VBox/MarginContainer/VBoxInner/BonusPanel/BonusVBox/BonusHBox/BonusVBox2" unique_id=391731794]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 18
text = "2ÂÄçÔºÅ"

[node name="DrawersContainer" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=1599805191]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="UltButtons" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=1722448895]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PeekButton" type="Button" parent="VBox/MarginContainer/VBoxInner/UltButtons" unique_id=1006127375]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üîç ‰∏≠Ë∫´„ÇíË¶ã„Çã [1]"

[node name="ResetButton" type="Button" parent="VBox/MarginContainer/VBoxInner/UltButtons" unique_id=117235165]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üîÑ Âºï„ÅçÂá∫„Åó„É™„Çª„ÉÉ„Éà [1]"

[node name="ActionButtons" type="HBoxContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=2085668355]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="NextButton" type="Button" parent="VBox/MarginContainer/VBoxInner/ActionButtons" unique_id=1903563751]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Ê¨°„ÅÆ„É©„Ç¶„É≥„Éâ„Å∏ ‚ñ∂"

[node name="RestartButton" type="Button" parent="VBox/MarginContainer/VBoxInner/ActionButtons" unique_id=1667091656]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "„ÇÇ„ÅÜ‰∏ÄÂ∫¶Êé¢Á¥¢"

[node name="LootPanel" type="PanelContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=1272387527]
layout_mode = 2

[node name="LootVBox" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/LootPanel" unique_id=737690871]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LootTitle" type="Label" parent="VBox/MarginContainer/VBoxInner/LootPanel/LootVBox" unique_id=230465806]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 14
text = "„Åì„ÅÆ„É©„Ç¶„É≥„Éâ„ÅÆÁç≤Âæó„Ç¢„Ç§„ÉÜ„É† (0/2)"

[node name="LootList" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/LootPanel/LootVBox" unique_id=1853646379]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InventoryPanel" type="PanelContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=195059022]
layout_mode = 2

[node name="InventoryVBox" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/InventoryPanel" unique_id=762783829]
layout_mode = 2
theme_override_constants/separation = 6

[node name="InventoryTitle" type="Label" parent="VBox/MarginContainer/VBoxInner/InventoryPanel/InventoryVBox" unique_id=893454125]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.88, 1, 1)
theme_override_font_sizes/font_size = 14
text = "üì¶ ÊâÄÊåÅ„Ç¢„Ç§„ÉÜ„É†"

[node name="InventoryList" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/InventoryPanel/InventoryVBox" unique_id=1740091077]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ResultPanel" type="PanelContainer" parent="VBox/MarginContainer/VBoxInner" unique_id=1180513368]
visible = false
layout_mode = 2

[node name="ResultVBox" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/ResultPanel" unique_id=1904108203]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResultTitle" type="Label" parent="VBox/MarginContainer/VBoxInner/ResultPanel/ResultVBox" unique_id=1103128506]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 22
text = "üèÜ „Ç≤„Éº„É†ÁµÇ‰∫ÜÔºÅ"
horizontal_alignment = 1

[node name="ResultRank" type="Label" parent="VBox/MarginContainer/VBoxInner/ResultPanel/ResultVBox" unique_id=2081829900]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "SÁ¥ö„Çµ„Éê„Ç§„Éê„ÉºÔºÅüèÜ"
horizontal_alignment = 1

[node name="ResultScore" type="Label" parent="VBox/MarginContainer/VBoxInner/ResultPanel/ResultVBox" unique_id=46026020]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "ÂêàË®àÁç≤Âæó‰æ°ÂÄ§: ¬•0"
horizontal_alignment = 1

[node name="RankingTitle" type="Label" parent="VBox/MarginContainer/VBoxInner/ResultPanel/ResultVBox" unique_id=1021520723]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 14
text = "üèÖ „Éè„Ç§„Çπ„Ç≥„Ç¢„É©„É≥„Ç≠„É≥„Ç∞"

[node name="RankingList" type="VBoxContainer" parent="VBox/MarginContainer/VBoxInner/ResultPanel/ResultVBox" unique_id=1327764583]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PeekOverlay" type="CanvasLayer" parent="." unique_id=1369280658]
visible = false

[node name="DimBG" type="ColorRect" parent="PeekOverlay" unique_id=1883774193]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="PeekOverlay" unique_id=68355431]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0

[node name="PanelVBox" type="VBoxContainer" parent="PeekOverlay/Panel" unique_id=1507034391]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="IndexLabel" type="Label" parent="PeekOverlay/Panel/PanelVBox" unique_id=1134193378]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.88, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Âºï„ÅçÂá∫„Åó 1 „ÅÆ‰∏≠Ë∫´"
horizontal_alignment = 1

[node name="IconLabel" type="Control" parent="PeekOverlay/Panel/PanelVBox" unique_id=1321902622]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2

[node name="NameLabel" type="Label" parent="PeekOverlay/Panel/PanelVBox" unique_id=1083730377]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "„Ç¢„Ç§„ÉÜ„É†Âêç"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="PeekOverlay/Panel/PanelVBox" unique_id=10496308]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "„É¨„Ç¢"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PeekOverlay/Panel/PanelVBox" unique_id=71377941]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Èñâ„Åò„Çã"

[node name="SFXDrawer" type="AudioStreamPlayer" parent="." unique_id=813919284]
stream = ExtResource("2_0bbpv")

[node name="SFXLegendary" type="AudioStreamPlayer" parent="." unique_id=1054350261]
stream = ExtResource("3_rarhs")

[node name="ItemListOverlay" type="CanvasLayer" parent="." unique_id=1354655106]
visible = false

[node name="DimBG" type="ColorRect" parent="ItemListOverlay" unique_id=254106667]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.82)

[node name="Panel" type="PanelContainer" parent="ItemListOverlay" unique_id=315309954]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0

[node name="VBox" type="VBoxContainer" parent="ItemListOverlay/Panel" unique_id=1483661391]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderRow" type="HBoxContainer" parent="ItemListOverlay/Panel/VBox" unique_id=268302242]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ItemListOverlay/Panel/VBox/HeaderRow" unique_id=1386263119]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "üìã „Ç¢„Ç§„ÉÜ„É†Âõ≥Èëë  (ÂÖ®88Á®Æ)"

[node name="CloseButton" type="Button" parent="ItemListOverlay/Panel/VBox/HeaderRow" unique_id=197072788]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚úï Èñâ„Åò„Çã"

[node name="FilterRow" type="HBoxContainer" parent="ItemListOverlay/Panel/VBox" unique_id=873096307]
layout_mode = 2
theme_override_constants/separation = 6

[node name="FilterAll" type="Button" parent="ItemListOverlay/Panel/VBox/FilterRow" unique_id=371843150]
layout_mode = 2
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_pressed = true
text = "„Åô„Åπ„Å¶"

[node name="FilterCommon" type="Button" parent="ItemListOverlay/Panel/VBox/FilterRow" unique_id=1037054753]
layout_mode = 2
theme_override_colors/font_color = Color(0.478, 0.541, 0.6, 1)
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "„Ç≥„É¢„É≥"

[node name="FilterUncommon" type="Button" parent="ItemListOverlay/Panel/VBox/FilterRow" unique_id=833244964]
layout_mode = 2
theme_override_colors/font_color = Color(0.302, 0.722, 0.478, 1)
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "„Ç¢„É≥„Ç≥„É¢„É≥"

[node name="FilterRare" type="Button" parent="ItemListOverlay/Panel/VBox/FilterRow" unique_id=151608588]
layout_mode = 2
theme_override_colors/font_color = Color(0.29, 0.62, 1, 1)
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "„É¨„Ç¢"

[node name="FilterEpic" type="Button" parent="ItemListOverlay/Panel/VBox/FilterRow" unique_id=935321880]
layout_mode = 2
theme_override_colors/font_color = Color(0.69, 0.416, 1, 1)
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "„Ç®„Éî„ÉÉ„ÇØ"

[node name="FilterLegendary" type="Button" parent="ItemListOverlay/Panel/VBox/FilterRow" unique_id=1388477986]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.784, 0.267, 1)
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "„É¨„Ç∏„Çß„É≥„ÉÄ„É™„Éº"

[node name="ScrollContainer" type="ScrollContainer" parent="ItemListOverlay/Panel/VBox" unique_id=1295081721]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemGrid" type="GridContainer" parent="ItemListOverlay/Panel/VBox/ScrollContainer" unique_id=1742493998]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 6
columns = 3

[node name="RulesOverlay" type="CanvasLayer" parent="." unique_id=10663854]
visible = false

[node name="DimBG" type="ColorRect" parent="RulesOverlay" unique_id=717795682]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.82)

[node name="Panel" type="PanelContainer" parent="RulesOverlay" unique_id=1411817838]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -320.0
offset_right = 340.0
offset_bottom = 320.0

[node name="VBox" type="VBoxContainer" parent="RulesOverlay/Panel" unique_id=2145920929]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderRow" type="HBoxContainer" parent="RulesOverlay/Panel/VBox" unique_id=336134128]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="RulesOverlay/Panel/VBox/HeaderRow" unique_id=1127374017]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 20
text = "üìñ „Ç≤„Éº„É†„É´„Éº„É´"

[node name="CloseButton" type="Button" parent="RulesOverlay/Panel/VBox/HeaderRow" unique_id=1645728304]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚úï Èñâ„Åò„Çã"

[node name="ScrollContainer" type="ScrollContainer" parent="RulesOverlay/Panel/VBox" unique_id=939394920]
layout_mode = 2
size_flags_vertical = 3

[node name="RulesText" type="RichTextLabel" parent="RulesOverlay/Panel/VBox/ScrollContainer" unique_id=776915455]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
